Upgraded to Java 13 + -XX:UseZGC + Updated Dependencies